--- a/src/contact.html
+++ b/src/contact.html
@@ -9,7 +9,7 @@ permalink: /contact
     <input type="hidden" name="lang" value="fr">
     <input type="hidden" name="type" value="contact">
     <input type="hidden" name="website" value="{{ site.data.company.websiteId }}">
-    <input type="hidden" name="redirectUrl" value="{{site.url}}{% link formulaire-succes.html %}">
+    <input type="hidden" name="redirectUrl" value="{{site.url}}/formulaire-succes">
     <div class="row">
         <div class="col-6">
             <div class="row">
