--- a/src/formulaire-succes.html
+++ b/src/formulaire-succes.html
@@ -1,10 +1,14 @@
 ---
 layout: default
-permalink: /message-envoye
+permalink: /formulaire-succes
 ---
 
-<p class="alert alert-success">
-    Votre formulaire a bien été envoyé.<br>
-    Vous serez recontacté aussi rapidement que possible&nbsp;!
-</p>
-<a href="{% link accueil.html %}">Retour sur la page d'accueil</a>
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1>Merci pour votre message</h1>
+            <p>Votre demande a bien été envoyée. Nous vous répondrons dans les plus brefs délais.</p>
+            <a href="/" class="btn btn-primary mt-3">Retour à l'accueil</a>
+        </div>
+    </div>
+</div>
