--- a/src/ambulance-creteil.html
+++ b/src/ambulance-creteil.html
@@ -15,7 +15,7 @@ description: Ambulance Créteil
                 <p>Pour votre déplacement médical, <strong>Ambulance Créteil</strong> met à votre disposition des ambulanciers réactifs, qualifiés, ponctuels et dévoués. Notre équipe d'ambulanciers vous aidera à vous installer dans le véhicule (en position allongée ou assise), vous aidera à sortir pour rejoindre votre clinique ou cabinet médical. </p>
                 <p><strong>Ambulance Créteil</strong> garantit des soins préhospitaliers de haut niveau durant le transfert des patients. <strong>Nos ambulanciers sont titulaires d’un diplôme DEA et de nombreuses années d'expérience professionnelle. </strong>Ils ont suivi des cours approfondis en secourisme et en soins infirmiers, dont ils peuvent intervenir dans des situations d'urgence et prodiguer des premiers soins. Ils sont aptes à vous proposer des soins médicaux efficaces et urgents, quelle que soit la situation : accident, transfert interhospitalier, maternité, etc.</p>
             </div>
-            <div class="col-sm-6"><br>{% include pre-devis.html %}</div>
+            <!-- <div class="col-sm-6"><br>{% include pre-devis.html %}</div> -->
         </div>
         <p>Pour toute demande de renseignements sur notre service, n'hésitez pas à contacter Ambulance Créteil au <a href="tel:<?= $conf_phone1 ?>"><?= $call_phone1 ?></a> ou veuillez remplir notre formulaire en ligne. Nous vous répondrons dans les plus brefs délais.</p>
         <br>
