remplacement du include

--- a/src/ambulance-ivry-sur-seine.html
+++ b/src/ambulance-ivry-sur-seine.html
@@ -15,7 +15,7 @@ description: Ambulance Ivry-sur-Seine
                 <p><strong>Ambulance Ivry-sur-Seine se charge de transporter des personnes malades, blessées, handicapées ou à mobilité réduite </strong>vers des hôpitaux pour des soins, des examens médicaux et des thérapies (sous rendez-vous ou en urgence). Nous transportons nos patients en position semi-assise ou couchée et nous leur proposons une bonne surveillance lors du trajet. Nous avons aussi comme tâche d'assister les patients, de les aider à installer confortablement dans l'ambulance, de les rassurer ou de les réconforter. Pendant la période de transfert, nous fournissons des soins et une assistance en fonction de votre état de santé. </p>
                 <p><strong>Nous sommes conformes à la réglementation générale des services ambulanciers. </strong>Nous avons pour but de fournir à tous nos clients un service rapide, efficace et de qualité à chacun de nos patients. Nos ambulances sont confortables, spacieuses et entièrement équipées. Ainsi, vous pouvez voyager en toute sécurité.</p>
             </div>
-            <div class="col-sm-6"><br>{% include pre-devis_.html %}</div>
+            <div class="col-sm-6"><br>{% include pre-devis.html %}</div>
         </div>
         <p>Pour une urgence ou pour une consultation médicale sous rendez-vous, n’hésitez pas à réserver <strong>Ambulance Ivry-sur-Seine au <a href="tel:{{ site.data.company.phone1 }}">{{ site.data.company.phone1 }}</a> ou en ligne sur notre site.</strong> Nous vous répondrons rapidement et prendrons en charge votre requête ou votre urgence. </p>
         <br>
