--- a/src/ambulance-essonne.html
+++ b/src/ambulance-essonne.html
@@ -6,7 +6,7 @@ description: Ambulance Essonne
 ---
 <section class="seo haut">
 	<div class="container">
-		<img src="{{ site.baseurl }}/assets/img/panneau-essonne.png" class="img-responsive">
+		<img src="./assets/img/panneau-essonne.png" class="img-responsive">
 		<div class="row">
 			<div class="col-sm-12 text-left">
 				<h1>Faites appel au leader dans le département de l’Essonne pour vos transports en ambulance. </h1>
@@ -30,7 +30,7 @@ description: Ambulance Essonne
                    <p>En tant que société d'ambulance Essonne située à Montgeron, nous pouvons couvrir une large zone au sein du département, notre personnel connaissant tous les recoins du 91 pour ainsi conduire au plus vite les personnes en situation d'urgence.</p>
                 </div>
                 <div class="col-sm-6 ">
-				    <img src="{{ site.baseurl }}/assets/img/ambulance-1.jpg" class="img-responsive" alt="ambulance essonne">
+				    <img src="./assets/img/ambulance-1.jpg" class="img-responsive" alt="ambulance essonne">
 			    </div>
            </div>
    </div>
