--- a/src/ambulance-ivry-sur-seine.html
+++ b/src/ambulance-ivry-sur-seine.html
@@ -73,7 +73,7 @@ description: Ambulance Ivry-sur-Seine
         <br>
         <h2 class="text-center">SERVICE D’URGENCE</h2>
         <div class="row">
-            <div class="col-sm-6"><img src="{{ site.baseurl }}/assets/img/img6.jpg" alt="Derrière camion ambulance" class="img-responsive"></div>
+            <div class="col-sm-6"><img src="./assets/img/img6.jpg" alt="Derrière camion ambulance" class="img-responsive"></div>
             <div class="col-sm-6"><br><br>
                 <p><strong>Ambulance Ivry-sur-Seine</strong>prend à cœur la santé et le bien-être des habitants à Ivry-sur-Seine. Notre équipe d'ambulanciers propose des soins préhospitaliers d’urgences aux patients. Nous faisons tout notre possible pour les transporter rapidement dans les centres de soins les plus proches pour qu’ils obtiennent les traitements nécessaires.</p>
                 <p>Pour des cas urgents, veuillez contacter Ambulance Ivry-sur-Seine <a href="tel:{{ site.data.company.phone1 }}">{{ site.data.company.phone1 }}</a> dès qu’un incident survient, peu importe où vous vous trouvez ! </p>
@@ -86,12 +86,12 @@ description: Ambulance Ivry-sur-Seine
                 <p><strong>Ambulance Ivry-sur-Seine </strong>assure le confort et bien-être des patients durant tout le trajet ou jusqu’à leur arrivée au centre de soin. Nos ambulanciers qualifiés et expérimentés peuvent intervenir à tout moment pour fournir aux patients les premiers soins en cas de besoin. Nous proposons un service d’ambulance ponctuel, rapide et fiable, quel que soit votre état de santé.</p>
                 <p>Si vous avez besoin d’un service d’ambulance pour vos rendez-vous chez le médecin ou pour une urgence, n'hésitez pas à nous contacter au <a href="tel:{{ site.data.company.phone1 }}">{{ site.data.company.phone1 }}</a> ou veuillez remplir notre <a href="{{ site.baseurl }}/contact">formulaire en ligne</a>. Nous vous répondrons dans les plus brefs délais. </p>
             </div>
-            <div class="col-sm-6"><br><img src="{{ site.baseurl }}/assets/img/img3.jpg" alt="Camion ambulance 3" class="img-responsive"></div>
+            <div class="col-sm-6"><br><img src="./assets/img/img3.jpg" alt="Camion ambulance 3" class="img-responsive"></div>
         </div>
         <br>
         <h2>DES AMBULANCIERS QUALIFIÉS ET EXPÉRIMENTÉS</h2>
         <div class="row">
-            <div class="col-sm-6"><img src="{{ site.baseurl }}/assets/img/img4.jpg" alt="couloir hopital" class="img-responsive"></div>
+            <div class="col-sm-6"><img src="./assets/img/img4.jpg" alt="couloir hopital" class="img-responsive"></div>
             <div class="col-sm-6">
                 <p>L'équipe d'<strong>Ambulance Ivry-sur-Seine </strong>est à votre disposition 24 heures sur 24 et 7 jours sur 7. Ils effectuent plus d’une centaine d’interventions par année. Nos ambulanciers prennent en charge les transferts des patients vers un centre de soin. Ils peuvent intervenir dans des cas urgents (accidents, blessures graves... ) ou sous rendez-vous médical. Ils examinent l’état de santé du patient, par la suite ils lui prodiguent des soins nécessaires, et lui transportent vers un centre hospitalier le plus proche. Durant le trajet, ils veillent à ce que l’état du patient ne s’aggrave. Nos ambulanciers sont titulaires d'un diplôme d'État d'ambulancier (DEA), délivré par le ministère de la Santé. Chaque année, nos ambulanciers reçoivent une formation liée à leur pratique professionnelle pour améliorer leurs compétences et rester à l'avant-garde des soins d'urgence.</p>
             </div>
@@ -110,10 +110,10 @@ description: Ambulance Ivry-sur-Seine
                 <br>
                 <p>Pour toute demande de renseignements sur notre service, n'hésitez pas à contacter <strong>Ambulance Ivry-sur-Seine</strong> au <a href="tel:{{ site.data.company.phone1 }}">{{ site.data.company.phone1 }}</a> ou veuillez remplir notre <a href="{{ site.baseurl }}/contact">formulaire en ligne</a>. Nous vous répondrons dans les plus brefs délais.</p>
             </div>
-            <div class="col-sm-6"><img src="{{ site.baseurl }}/assets/img/img8.jpg" alt="Camion ambulance 2" class="img-responsive"></div>
+            <div class="col-sm-6"><img src="./assets/img/img8.jpg" alt="Camion ambulance 2" class="img-responsive"></div>
         </div><br>
         <div class="row">
-            <div class="col-sm-6"><img src="{{ site.baseurl }}/assets/img/imgentreprise.jpg" alt="Médecins devant radio" class="img-responsive"></div>
+            <div class="col-sm-6"><img src="./assets/img/imgentreprise.jpg" alt="Médecins devant radio" class="img-responsive"></div>
             <div class="col-sm-6">
                 <h2 class="text-center">DES AMBULANCES BIEN ENTRETENUES ET BIEN ÉQUIPÉES SONT À VOTRE DISPOSITION</h2>
                 <p>Nous disposons d’ambulances climatisées, confortables et bien équipées pour un meilleur service de transfert et des soins d'urgence. Nos ambulances et VSL disposent également de deux ambulanciers certifiés et expérimentés qui prennent en charge les patients jusqu'à leur arrivée à l'hôpital.</p>
@@ -153,7 +153,7 @@ description: Ambulance Ivry-sur-Seine
                     <li>Nos véhicules sont conventionnés, confortables et climatisés.</li>
                 </ul>
             </div>
-            <div class="col-sm-6"><br><br><img src="{{ site.baseurl }}/assets/img/medical-img-1.png" alt="Médecins avec blouse blanche" class="img-responsive"></div>
+            <div class="col-sm-6"><br><br><img src="./assets/img/medical-img-1.png" alt="Médecins avec blouse blanche" class="img-responsive"></div>
         </div>
         <br>
         <p>Si vous avez besoin d’un transport médical pour vos rendez-vous chez le médecin ou pour une hospitalisation, n’hésitez pas à faire appel à <strong>Ambulance Ivry-sur-Seine</strong> au <a href="tel:{{ site.data.company.phone1 }}">{{ site.data.company.phone1 }}</a> ou à <a href="{{ site.baseurl }}/contact">réserver votre course en ligne. </a></p>
