--- a/src/nos-services.html
+++ b/src/nos-services.html
@@ -34,7 +34,7 @@ description: Voici la page de nos services.
             </div>
 
             <div class="col-sm-6">
-                <img src="{{ site.baseurl }}/assets/img/imgservice.jpg" class="img-responsive" alt="Stéthoscope 3">
+                <img src="./assets/img/imgservice.jpg" class="img-responsive" alt="Stéthoscope 3">
             </div>
         </div>
     </div>
