--- a/src/accueil.html
+++ b/src/accueil.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /
-title: Page d'accueil
-description: Voici la page d'accueil.
+title: "Ambulance Vitry sur Seine (94400) | Action Ambulance"
+description: "Notre service d'ambulance à Vitry. Transport médicalisé et secours d'urgence. Confiez votre santé à Action Ambulance pour des soins fiables et rapides."
 ---
 
 <section class="one margin-84">
