--- a/src/ambulance-ivry-sur-seine.html
+++ b/src/ambulance-ivry-sur-seine.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /ambulance-ivry-sur-seine
-title: Ambulance Ivry-sur-Seine
-description: Ambulance Ivry-sur-Seine
+title: "Services d'ambulance à Ivry-sur-Seine | Devis gratuit"
+description: "Optez pour notre service d'ambulance à Ivry-sur-Seine. Transport médicalisé et assistance d'urgence. Votre partenaire de confiance pour des soins rapides."
 ---
 
 <section class="one">
