--- a/src/contact.html
+++ b/src/contact.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /contact
-title: Contact
-description: Voici la page de contact.
+title: "Contactez-nous pour un déplacement en l'Île-de-France"
+description: "Besoin d'un service d'ambulance ? Contactez-nous dès maintenant pour une assistance médicale rapide et professionnelle. Votre santé compte pour nous !"
 ---
 
 <section class="one">
