--- a/src/nos-services.html
+++ b/src/nos-services.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /nos-services
-title: Nos services
-description: Voici la page de nos services.
+title: "Découvrez les services d'ambulanciers de notre société dans le 94"
+description: "Découvrez nos services d'ambulance médicalisée et de secours d'urgence. Une équipe dévouée pour votre santé et votre sécurité. Contactez-nous maintenant."
 ---
 
 <section class="slide">
