--- a/src/notre-entreprise.html
+++ b/src/notre-entreprise.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 permalink: /notre-entreprise
-title: Notre entreprise
-description: Voici la page de notre entreprise.
+title: "Découvrez notre entreprise d'ambulance dans le 94 | Action ambulance"
+description: "Découvrez Action Ambulance | Votre partenaire de confiance en IDF. Des soins médicaux professionnels et rapides pour votre bien-être ! Contactez-nous."
 ---
-
 
 <section class="slide">
     <div class="bgblack"></div>
