--- a/src/reservation.html
+++ b/src/reservation.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /reservation
-title: Réservation
-description: Réservez votre ambulance en ligne
+title: "Faites votre réservation simplement en ligne sur notre site internet"
+description: "Réservez facilement nos services d'ambulance médicalisée en ligne. Des soins de qualité accessibles en quelques clics. Votre bien-être est notre priorité."
 ---
 
 <section class="one">
