--- a/src/ambulance-creteil.html
+++ b/src/ambulance-creteil.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /ambulance-creteil
-title: Ambulance Créteil
-description: Ambulance Créteil
+title: "Ambulance Créteil & VSL"
+description: "Besoin d'une ambulance à Créteil ? Notre équipe médicale assure un transport sûr et professionnel. Faites confiance à notre société pour votre santé !"
 ---
 
 <section class="one">
