--- a/src/ambulance-vitry.html
+++ b/src/ambulance-vitry.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /ambulance-vitry
-title: Ambulance Vitry
-description: Ambulance Vitry
+title: "Ambulance Vitry sur Seine (94400) | Action Ambulance"
+description: "Notre service d'ambulance à Vitry. Transport médicalisé et secours d'urgence. Confiez votre santé à Action Ambulance pour des soins fiables et rapides."
 ---
 
 <section class="seo haut">
